--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "email-verification": "^0.4.6",
     "express": "^4.18.2",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
